added {key,value} in burner.config as config items, renamed ssi-data to burner-data, ssi-error, burner-status and added config items in a hash-map under script burner-config

--- a/www/data/burner.config
+++ b/www/data/burner.config
@@ -3,6 +3,8 @@
 %% Data example for burner.config
 %%
 %%
+{domain, "domain.com"}.
+{username, "joe"}.
 
 #{alias => "bob",block => false,
   date => {{2025,5,26},{18,50,53}},
