layout och funktion funkar bättre

--- a/www/data/burner.config
+++ b/www/data/burner.config
@@ -2,16 +2,32 @@
 %%
 %% Data example for burner.config
 %%
-%%
-{domain, "domain.com"}.
-{username, "joe"}.
 
-#{alias => "bob",block => false,
-  date => {{2025,5,26},{18,50,53}},
-  comment => "shopping",site => "www.alibaba.com",password => []}.
-#{alias => "alice",block => false,
-  date => {{2025,5,26},{21,34,33}},
-  comment => "foot ware",site => "www.google.se",password => []}.
-#{alias => "greg",block => true,
-  date => {{2025,5,26},{21,57,51}},
-  comment => "apple work",site => "www.apple.com",password => []}.
+{domain, "rogvall.se"}.
+{username, "kim"}.
+{toggle_on, "ON"}.
+{toggle_off, "OFF"}.
+
+#{alias => "alias", block => false,
+  date => {{25,5,26},{18,50,53}},
+  comment => "shopping",
+  site => "www.clasohlson.se",
+  forwarded => 0,
+  blocked => 0,
+  password => []}.
+
+#{alias => "clas o", block => false,
+  date => {{25,5,26},{21,34,33}},
+  comment => "foot ware",
+  site => "www.google.se",
+  forwarded => 0,
+  blocked => 0,
+  password => []}.
+
+#{alias => "ICA", block => true,
+  date => {{25,5,26},{21,57,51}},
+  comment => "apple work",
+  site => "www.apple.com",
+  forwarded => 0,
+  blocked => 0,
+  password => []}.
